# tools

aio-grab-arm/: acinclude.m4  main.c
evremote2/: Cuberevo.c  Cuberevo.h  Fortis.c  Ipbox.c  LircdName.c  Makefile.am  Spark.c  Tf7700.c  Ufs922.c  evremote.c  global.h  remotes.c  remotes.h
femon/: acinclude.m4
fp_control/: Makefile.am  fp_control.c  global.c  global.h
lcd_ctrl/: Makefile.am  autogen.sh  configure.ac  lcd.c  lcd.h  lcd_font.h
msgbox/: acinclude.m4  rc_device.h  text.c
oled_ctrl/: Makefile.am  acinclude.m4  oled_driver.c  oled_freetype.c  oled_main.c
png_util/: Makefile.am  acinclude.m4  autogen.sh  configure.ac  png_util.cpp  png_util.h
satfind/: satfind.c
sysinfo/: Makefile.am  icons.h  rc_device_hardcoded.h  sysinfo.c
turnoff_power/: acinclude.m4
tuxcal/: acinclude.m4  rc_device_hardcoded.h  tuxcal.c
tuxcom/: tuxcom.c
updateubivolume/: Makefile.am  autogen.sh  configure.ac
