AC_INIT([png_util],[1.0],[],[png_util])
AM_INIT_AUTOMAKE
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
m4_ifdef([LT_INIT], [LT_INIT], [AC_PROG_LIBTOOL])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])

TUXBOX_BOXTYPE

AC_PROG_CC
AC_PROG_CXX

PKG_CHECK_MODULES(PNG,libpng)

AC_OUTPUT([
Makefile
])
